--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -21,7 +21,7 @@
         &nbsp;&nbsp;|&nbsp;&nbsp;
         <%= link_to "Login to My Account", new_user_session_path %>
         &nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="https://tocafootball.com/" target="_blank">TOCA Football</a>
+        <a href="https://tocafootball.com/" target="_blank">TOCA&nbsp;Football</a>
       </span>
     </div>
 
