--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,7 +1,7 @@
 <main class="mt-5">
   <div class="container">
 
-    <h1 class="text-center">FAQ</h1>
+    <h1 class="text-center">Info</h1>
 
     <section class="team-section magazine-section text-center">
       <div class="text-center">
@@ -10,7 +10,7 @@
 
     </section>
 
-    <section class="my-5"> <!-- Features Section 1 -->
+    <section class="my-5 faq"> <!-- Features Section 1 -->
 
       <% n = 1 %>
 
