--- a/app/views/pages/testimonials.html.erb
+++ b/app/views/pages/testimonials.html.erb
@@ -1,28 +1,31 @@
 <main class="mt-5">
-  <div class="container-fluid">
+  <div class="container">
 
     <h1 class="text-center">Testimonials</h1>
 
     <section class="team-section magazine-section text-center">
-      <p class="dark-grey-text w-responsive mx-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
-        eum porro a pariatur veniam.</p>
+      <p class="dark-grey-text w-responsive mx-auto">
+        Read what others say about the program and share your thoughts of how grants have helped you.  This section is to let you know your contributions make a difference and to show you how others are using the program to improve their lives.  The program is confidential, but the impact on the group&nbsp;is&nbsp;tangible.
+      </p>
 
     <div class="text-center mb-5">
       <%= link_to "Submit a Testimonial", page_path(:apply), class: "btn btn-secondary" %>
     </div> <!-- center for button -->
+  </div> <!-- container -->
 
-    <hr>
 
+
+
+  <hr>
+
+
+
+  <div class="container-fluid px-5 py-5">
     <div class="row text-center">
-
-
-
 
       <div class="col-lg-4 mb-md-0 mb-5"> <!-- hardship -->
 
         <div class="testimonial">
-          <h3 class="font-weight-bold color-toca-red toca-uppercase my-4">Hardship</h3>
           <div class="row">
             <div class="col-sm-4 col-lg-12">
               <div class="avatar mx-auto mb-3">
@@ -30,8 +33,8 @@
               </div> <!-- avatar -->
             </div> <!-- column -->
             <div class="col-sm-8 col-lg-12 text-left">
-              <h6 class="font-weight-bold color-black toca-uppercase mt-3">Legal Assistance</h6>
-              <p class="font-weight-normal dark-grey-text">
+              <h6 class="font-weight-bold color-black toca-uppercase mt-3">Hardship:  Legal Assistance</h6>
+              <p class="dark-grey-text">
                 <i class="fas fa-quote-left pr-2 color-toca-red"></i>
                 When TOCA offered assistance to me during a very rough period in my life, I not only had the peace of mind that I was going to be ok and would get past this, but it also gave me the comfort of knowing that TOCA had my back; they were there to pick me up and help me move forward. I am blessed to work for a company that feels like a second family to me.
                 <i class="fas fa-quote-right pl-2 color-toca-red"></i>
@@ -40,33 +43,6 @@
           </div> <!-- row -->
         </div> <!-- testimonial -->
 
-        <div class="single-news text-left mb-3">
-          <div class="d-flex justify-content-between">
-            <div class="col-11 text-truncate pl-0 mb-3">
-              <a>Another testimonial.</a>
-            </div>
-            <a><i class="color-toca-green fas fa-angle-double-right"></i></a>
-          </div>
-        </div> <!-- Small news -->
-
-        <div class="single-news text-left mb-3">
-          <div class="d-flex justify-content-between">
-            <div class="col-11 text-truncate pl-0 mb-3">
-              <a>More testimonials</a>
-            </div>
-            <a><i class="color-toca-green fas fa-angle-double-right"></i></a>
-          </div>
-        </div> <!-- Small news -->
-
-        <div class="single-news text-left mb-3">
-          <div class="d-flex justify-content-between">
-            <div class="col-11 text-truncate pl-0 mb-3">
-              <a>And so on</a>
-            </div>
-            <a><i class="color-toca-green fas fa-angle-double-right"></i></a>
-          </div>
-        </div> <!-- Small news -->
-
       </div> <!-- end hardship -->
 
 
@@ -74,7 +50,6 @@
 
       <div class="col-lg-4 mb-md-0 mb-5"> <!-- scholarship -->
         <div class="testimonial">
-            <h3 class="font-weight-bold color-toca-red toca-uppercase my-4">Scholarship</h3>
             <div class="row">
               <div class="col-sm-4 col-lg-12">
                 <div class="avatar mx-auto mb-3">
@@ -82,8 +57,8 @@
                 </div>
               </div> <!-- col -->
               <div class="col-sm-8 col-lg-12 text-left">
-                <h6 class="font-weight-bold color-black toca-uppercase mt-3">Example 1</h6>
-                <p class="font-weight-normal dark-grey-text">
+                <h6 class="font-weight-bold color-black toca-uppercase mt-3">Scholarship:  Example 1</h6>
+                <p class="dark-grey-text">
                   <i class="fas fa-quote-left pr-2 color-toca-red"></i>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.
                   <i class="fas fa-quote-right pl-2 color-toca-red"></i>
@@ -91,33 +66,6 @@
               </div> <!-- col -->
             </div> <!-- row -->
           </div> <!-- testimonial -->
-
-          <div class="single-news text-left mb-3">
-            <div class="d-flex justify-content-between">
-              <div class="col-11 text-truncate pl-0 mb-3">
-                <a>Another testimonial.</a>
-              </div>
-              <a><i class="color-toca-green fas fa-angle-double-right"></i></a>
-            </div>
-          </div> <!-- Small news -->
-
-          <div class="single-news text-left mb-3">
-            <div class="d-flex justify-content-between">
-              <div class="col-11 text-truncate pl-0 mb-3">
-                <a>More testimonials</a>
-              </div>
-              <a><i class="color-toca-green fas fa-angle-double-right"></i></a>
-            </div>
-          </div> <!-- Small news -->
-
-          <div class="single-news text-left mb-3">
-            <div class="d-flex justify-content-between">
-              <div class="col-11 text-truncate pl-0 mb-3">
-                <a>And so on</a>
-              </div>
-              <a><i class="color-toca-green fas fa-angle-double-right"></i></a>
-            </div>
-          </div> <!-- Small news -->
 
         </div> <!--  scholarship  -->
 
@@ -127,7 +75,6 @@
         <div class="col-lg-4 mb-md-0 mb-5"> <!-- charity -->
 
           <div class="testimonial">
-            <h3 class="font-weight-bold color-toca-red toca-uppercase my-4">Charity</h3>
             <div class="row">
               <div class="col-sm-4 col-lg-12">
                 <div class="avatar mx-auto mb-3">
@@ -135,8 +82,8 @@
                 </div> <!-- avatar -->
               </div> <!-- column -->
               <div class="col-sm-8 col-lg-12 text-left">
-                <h6 class="font-weight-bold color-black toca-uppercase mt-3">Special Olympics</h6>
-                <p class="font-weight-normal dark-grey-text">
+                <h6 class="font-weight-bold color-black toca-uppercase mt-3">Charity: Special Olympics</h6>
+                <p class="dark-grey-text">
                   <i class="fas fa-quote-left pr-2 color-toca-red"></i>
                   Until I started working with the Special Olympics, I didn't understand the value for me and my community of charitable work.
                   <i class="fas fa-quote-right pl-2 color-toca-red"></i>
@@ -144,33 +91,6 @@
               </div> <!-- column -->
             </div> <!-- row -->
           </div> <!-- testimonial -->
-
-          <div class="single-news text-left mb-3">
-            <div class="d-flex justify-content-between">
-              <div class="col-11 text-truncate pl-0 mb-3">
-                <a>Another testimonial.</a>
-              </div>
-              <a><i class="color-toca-green fas fa-angle-double-right"></i></a>
-            </div>
-          </div> <!-- Small news -->
-
-          <div class="single-news text-left mb-3">
-            <div class="d-flex justify-content-between">
-              <div class="col-11 text-truncate pl-0 mb-3">
-                <a>More testimonials</a>
-              </div>
-              <a><i class="color-toca-green fas fa-angle-double-right"></i></a>
-            </div>
-          </div> <!-- Small news -->
-
-          <div class="single-news text-left mb-3">
-            <div class="d-flex justify-content-between">
-              <div class="col-11 text-truncate pl-0 mb-3">
-                <a>And so on</a>
-              </div>
-              <a><i class="color-toca-green fas fa-angle-double-right"></i></a>
-            </div>
-          </div> <!-- Small news -->
 
         </div> <!--  end charity  -->
 
