--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -1,5 +1,5 @@
 <main class="mt-5">
-  <div class="container-fluid">
+  <div class="container-fluid px-5">
 
     <h1 class="text-center">Apply</h1>
 
