--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,9 +45,8 @@
 
   <hr>
 
-  <div class="container-fluid px-5">
-     <section class="text-center">
-
+  <section class="text-center">
+    <div class="container-fluid px-5">
 
        <div class="row mt-5 mb-3 wow fadeIn">
 
@@ -125,10 +124,20 @@
                </div> <!-- card -->
            </div> <!--Grid column-->
 
-      </div> <!-- row -->
-    </section>
+        </div> <!-- row -->
+    </div> <!-- container -->
+  </section>
 
-   </div> <!-- container -->
+
+
+
+
+
+  <section id="process-map"> <!-- process map -->
+
+  </section> <!-- process map -->
+
+
  </main>
 
 
