--- a/app/views/pages/testimonials.html.erb
+++ b/app/views/pages/testimonials.html.erb
@@ -82,10 +82,13 @@
                 </div> <!-- avatar -->
               </div> <!-- column -->
               <div class="col-sm-8 col-lg-12 text-left">
-                <h6 class="font-weight-bold color-black toca-uppercase mt-3">Charity: Special Olympics</h6>
+                <h6 class="font-weight-bold color-black toca-uppercase mt-3">Charity: Community Support</h6>
                 <p class="dark-grey-text">
                   <i class="fas fa-quote-left pr-2 color-toca-red"></i>
+                  I always thought charity was something rich, older people did with their extra money and time. It wasn’t until I started to volunteer and get involved with helping others, did I understand the value and how good it made me feel to support my community.
+                  <!--
                   Until I started working with the Special Olympics, I didn't understand the value for me and my community of charitable work.
+                  -->
                   <i class="fas fa-quote-right pl-2 color-toca-red"></i>
                 </p>
               </div> <!-- column -->
