--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -22,7 +22,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q1H">What is the TOCA Cares fund?</h5>
           <p class="color-dark-grey d-startHidden" id ="Q1P">
-            TOCA Cares is an employee assistance program. Employees and shareholders will be able to make tax-deductible contributions to the TOCA Cares community fund. If an employee is facing an unexpected hardship, they can apply for a grant or loan. Those who do not draw from the fund for an unexpected hardship will have the opportunity to sponsor a charity of choice.
+            TOCA Cares is the way TOCA employees and shareholders take care of our own.  The community fund is sustained by tax-deductible contributions voluntarily made directly from employees' and shareholders' paychecks.  Any employee can then apply for a grant or loan from the community fund if they are facing an unexpected hardship, want to pursue an educational opportunity (from taking a cooking class to getting your degree), or want to cover costs to participate in charitable work.
           </p>
         </div> <!-- Grid column -->
       </div> <!-- Grid row -->
@@ -36,7 +36,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q2H">Why was the TOCA Cares fund created?</h5>
           <p class="color-dark-grey" id ="Q2P">
-            Here at TOCA, community is important. Our employees are what make TOCA great, so we want to make sure they’re supported when they find themselves in a serious financial hardship—because life happens. For those who may not find themselves in those situations, we wanted to create a platform for them to cultivate their passions and get involved in their surrounding communities through charitable giving.
+            Here at TOCA, community is important.  We know that life happens, so we want to make sure our employees have support if they find themselves in an unexpected financial jam.  We want to help our employees keep learning, even though it's sometimes costly to do so.  We want to make sure everyone in the TOCA community gets to experience the joys of giving back.  Community is important, and TOCA Cares is our way of supporting our own.
           </p>
         </div> <!-- Grid column -->
       </div> <!-- Grid row -->
@@ -50,7 +50,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q3H">How do I donate to the fund? </h5>
           <p class="color-dark-grey mb-0" id ="Q3P">
-            Each paycheck, you will have an option to donate an amount of your choice to the community fund. We hope every employee takes advantage of this, so the fund can be truly operational. <em>In order to make the fund accessible to everyone, all TOCA employees will automatically have a minimum of $5/month deducted from their paycheck.</em> Donations will be tax-deductible (if itemized).
+            You can donate <%= link_to "here", page_path(:contribute) %>.  Any TOCA employees who want to contribute can select any amount they want to donate directly from their paycheck.  All contributions go straight to the community fund and are completely tax-deductible.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -64,7 +64,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q4H">Shareholders will match my contribution and then some?</h5>
           <p class="color-dark-grey mb-0" id ="Q4P">
-            Yes! Shareholders will match your contribution and donate to the community fund. Depending on the year, shareholders may select to match anywhere from 2:1 to 6:1!
+            Yes! Shareholders will match your contribution to the community fund. For each $1 you give, shareholders will donate anywhere from $2 to $6.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -78,7 +78,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q5H">How do I apply to use the fund?</h5>
           <p class="color-dark-grey mb-0" id ="Q5P">
-            Log on to <%= link_to "TOCA Cares", new_user_session_path %> and fill out the <%= link_to "application", page_path(:apply) %>. Your application will then be sent to the Decision Committee for review. If accepted, you will be contacted by our partner organization, Helping Hands, to help with your financial situation.
+            To get started, create an account on <%= link_to "TOCA Cares", new_user_session_path %> and fill out the <%= link_to "application", page_path(:apply) %>. Check out the <%= link_to "application process map", root_path(anchor: "process-map") %> for the complete application journey.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -93,7 +93,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q6H">Is the application anonymous?</h5>
           <p class="color-dark-grey mb-0" id ="Q6P">
-            Your application is anonymous to everyone except the head of the Decision Committee and our partner organization, Helping Hands (both of whom are under confidentiality agreements).
+            Your application is completely anonymous to those on the Decision Committee.  Once your application has been approved, your details will be released just to the people who need to know to process the payment.  There are certain exceptions where information in an application will be shared with the employee’s manager on a discrete basis.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -108,7 +108,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q7H">Do I have to contribute to the fund to be able to use it?</h5>
           <p class="color-dark-grey mb-0" id ="Q7P">
-            Because this is a community fund and we want the fund to be accessible to everyone, all TOCA Employees are expected to contribute minimum amount of $5/month, which will be automatically deducted from your paycheck. But in order to make the community fund truly operational, it’s critical that employees donate more.
+            No.  All contributions are completely mandatory, but karma is a potent force.  Those who apply will be in the best position to see how important the community fund is.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -137,7 +137,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q10H">Which situations qualify to receive money from the fund?</h5>
           <p class="color-dark-grey mb-0" id ="Q10P">
-            The point of the fund is to help employees in serious financial disruptive events. Examples include medical costs, car accidents, home accidents, pet insurance, an airplane ticket for event you can’t miss, funeral expenses, etc. If you’re not sure, it doesn’t hurt to apply. If the situation does not qualify or exceeds the maximum grant amount, you could be offered a small loan.
+            The point of the fund is to help employees in serious and unexpected financial situtations. Examples include medical costs, car accidents, home accidents, an airplane ticket for event you can’t miss, funeral expenses, etc. If you’re not sure, it doesn’t hurt to apply. If the situation does not qualify or exceeds the maximum grant amount, you could be offered a small loan.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -153,7 +153,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q11H">Are there situations that don’t qualify to receive money from the fund?</h5>
           <p class="color-dark-grey mb-0" id ="Q11P">
-            If used correctly, most unexpected hardship applications will receive funding. Situations that don’t qualify include funding for vacations, repeated incidents (such as the 5th broken phone), luxury items, new pets, etc. If the situation exceeds the maximum grant amount, you could be offered a small loan. If the situation substantially exceeds the funds capabilities, such as extreme medical expenses, a home fire, etc., an employee crowdfunding platform can be established on the employee’s behalf.
+            Most logical unexpected hardship applications will receive funding. Situations that <em>don’t</em> qualify include funding for vacations, repeated incidents (such as the 5th broken phone), luxury items, new pets, or other forseeable expenses.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -169,7 +169,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q12H">Can I take out a loan instead of receiving money?</h5>
           <p class="color-dark-grey mb-0" id ="Q12P">
-            If the situation exceeds the maximum grant amount, you may be offered a small loan. Or, if you’re more comfortable with receiving a loan rather than grant, then indicate on your application. Loans will be deducted from your paycheck over a period of time.
+            Of course.  If you’re more comfortable with receiving a loan rather than grant, you can let us know on your application. Also, if the situation exceeds the maximum grant amount, you may be offered a small loan instead of a grant. Loans will be deducted from your paycheck over a period of time.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -185,7 +185,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q13H">How long do I have to request financial assistance?</h5>
           <p class="color-dark-grey mb-0" id ="Q13P">
-            The TOCA Cares Fund is suppose to help in the event of a hardship that can be hard to move past. The process is fairly quick and pays your bill. Because of this, if it’s a serious event, it’s expected you apply fairly quickly. That said, please try to apply no later than 30 days.
+            Usually financial emergencies happen fairly quickly. A good rule of thumb is no later than 30 days, but if you're not sure it doesn't hurt to apply.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -201,7 +201,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q14H">How fast is money available from the fund?</h5>
           <p class="color-dark-grey mb-0" id ="Q14P">
-            Depending on the need, money is available at different speeds. Typically, your bill can be paid within 3-4 days. It also depends on how fast you work with our partner organization, Helping Hands.
+            This depends on how fast you need the money. Typically, your bill can be paid within 3-4 days. It also depends on how fast you work with our partner organization, Helping Hands.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -217,11 +217,10 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q15H">Is there a max amount I can receive?</h5>
           <p class="color-dark-grey mb-0" id ="Q15P">
-            <em>Typical grant amounts range from $500-$1,500.</em> Depending on the situation (especially if it exceeds this amount), you offer may include part of a grant and part of a loan. If your needs drastically exceed our loan amounts, then TOCA may set up an employee crowdfunding platform on your behalf and publicize it to TOCA employees across the nation. TOCA Cares is here to work with you to meet your needs.
+            Typical grant amounts range from $500-$1,500. Depending on the situation (especially if it exceeds this amount), you may also be offered a mixture of a grant and a loan. If your needs drastically exceed our loan amounts, then TOCA may set up an employee crowdfunding platform on your behalf and publicize it to TOCA employees across the nation. Whatever your situation, TOCA is here to help you figure it out.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
-
 
 
 
@@ -233,7 +232,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q16H">How many times can I use the fund?</h5>
           <p class="color-dark-grey mb-0" id ="Q16P">
-            Unless abusing the fund, you may apply multiple times. However, after a certain amount of times, your request may be denied depending on the committee’s decision.
+            Unless you're obviously abusing the fund, you may apply multiple times. However, after a certain amount of applications, your likelihood of being approved will start to decrease.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -249,7 +248,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q17H">How often do I donate to the fund?</h5>
           <p class="color-dark-grey mb-0" id ="Q17P">
-            There will be a minimum donation requirement of $5/month and then you will have an option to donate more as frequently as you desire. All donations are made through paycheck deductions.
+            You can choose whatever amount you wish out of your monthly paycheck.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -265,7 +264,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q18H">Can I apply for the fund on another employee’s behalf?</h5>
           <p class="color-dark-grey mb-0" id ="Q18P">
-            Yes! If you know one of your coworkers are struggling, you can fill out the application and indicate why you’re applying.
+            Yes! If you know one of your coworkers are struggling, you can fill out the application on their behalf.  After the initial application, communications will be between that employee and the Decision Committee.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -281,7 +280,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q19H">Who makes the decision on my application?</h5>
           <p class="color-dark-grey mb-0" id ="Q19P">
-            The national Decision Committee, comprised of employees from various districts, are given criteria to determine if your situation qualifies.
+            A committee of fellow employees will decide on all applications.  Their membership is secret and they are bound to keep information confidential from other employees not on the committee.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -297,7 +296,13 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q20H">Can I apply to be on the Decision Committee?</h5>
           <p class="color-dark-grey mb-0" id ="Q20P">
-            Yes! The community will be alerted every rotation period and employees can self-nominate to be on the committee. Spots are limited and members will be chosen through a lottery system.
+            Yes! Just
+            <% if current_user %>
+              click the "click here to request to serve as a deciding committee member" link at the bottom of your <%= link_to "my account", user_path(current_user) %> page.
+            <% else %>
+              <%= link_to "create an account", new_user_registration_path %> or <%= link_to "log in", new_user_session_path %> and then click the "click here to request to serve as a deciding committee member" link at the bottom of your "my account" page.
+            <% end %>
+            The decision will be made by the Co-Chairman of the Board.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -313,39 +318,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q21H">Are my donations to the fund tax deductible?</h5>
           <p class="color-dark-grey mb-0" id ="Q21P">
-            Yes! As long as you itemize your deductions.
-          </p>
-        </div> <!-- Grid column -->
-      </div> <!--Grid row-->
-
-
-
-
-      <div class="row mb-3"> <!-- individual question -->
-        <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
-        </div> <!-- Grid column -->
-
-        <div class="col-xl-10 col-md-11 col-10">
-          <h5 class="font-weight-bold mb-3" id="Q22H">How long is the period until we have the option to make charitable donations?</h5>
-          <p class="color-dark-grey mb-0" id ="Q22P">
-            Every 6 months, if you have not drawn from the fund, you will have the option to pursue your charitable endeavors! With that said, you can also wait a year. After that, your contributions will reset.
-          </p>
-        </div> <!-- Grid column -->
-      </div> <!--Grid row-->
-
-
-
-
-      <div class="row mb-3"> <!-- individual question -->
-        <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
-        </div> <!-- Grid column -->
-
-        <div class="col-xl-10 col-md-11 col-10">
-          <h5 class="font-weight-bold mb-3" id="Q23H">How do I report where the fund money went?</h5>
-          <p class="color-dark-grey mb-0" id ="Q23P">
-            Our partnering charity, Helping Hands, will be responsible for collecting receipts and paying your bills. In terms of charity work, we’re excited for TOCA employees to share their charitable endeavors with the community on Workplace.
+            Yes! Just make sure you itemize your deductions.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -361,7 +334,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q24H">Wait, there are benefits under our insurance?</h5>
           <p class="color-dark-grey mb-0" id ="Q24P">
-            Yes! Note, this is completely separate from the TOCA Cares community fund. Depending on your need, you can be connected to a counselor, mediator, clinician, lawyer, or financial advisor. As part of your benefits, WorkLife services are available at no extra cost and are completely confidential. Either call 866-402-0003 or log on to <a href="https://wwwliveandworkwell.com" target="_blank">liveandworkwell.com</a> (access code: Insperity).
+            Yes! There are insurance benefits completely separate from the TOCA Cares community fund. As part of your benefits, WorkLife services are available at no extra cost and are completely confidential. Depending on your need, you can be connected to a counselor, mediator, clinician, lawyer, or financial advisor.  Either call 866-402-0003 or log on to <a href="https://wwwliveandworkwell.com" target="_blank">liveandworkwell.com</a> (access code: Insperity).
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
