JQuery Issue on Info Page

--- a/app/views/pages/contribute.html.erb
+++ b/app/views/pages/contribute.html.erb
@@ -25,7 +25,7 @@
 
 
     <div class="text-center mt-5 mb-3">
-      <%= link_to page_path(:apply), class: "btn btn-primary btn-lg" do %>Contribute from My Paycheck<% end %>
+      <%= link_to "Contribute from My Paycheck", asset_path("Insperity-Payroll-Deductions.pdf"), target: "_blank", class: "btn btn-primary btn-lg" %>
     </div> <!-- center for button -->
 
   </div> <!-- container -->
