--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -21,7 +21,7 @@
 
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q1H">What is the TOCA Cares fund?</h5>
-          <p class="color-dark-grey startHidden" id ="Q1P">
+          <p class="color-dark-grey d-startHidden" id ="Q1P">
             TOCA Cares is the way TOCA employees and shareholders take care of our own.  The community fund is sustained by tax-deductible contributions voluntarily made directly from employees' and shareholders' paychecks.  Any employee can then apply for a grant or loan from the community fund if they are facing an unexpected hardship, want to pursue an educational opportunity (from taking a cooking class to getting your degree), or want to cover costs to participate in charitable work.
           </p>
         </div> <!-- Grid column -->
