--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,10 @@
     <h1 class="text-center">Create an Account</h1>
 
     <section>
-      <h3 class="text-center dark-grey-text w-responsive mx-auto mb-5">"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur." -Author</h3>
+      <h3 class="text-center dark-grey-text w-responsive mx-auto mb-5">
+        The strength of the team is each member. <br class="d-none d-md-block">The strength of each member is&nbsp;the&nbsp;team.
+        <br><em><small>―Phil Jackson</small></em>
+      </h3>
     </section> <!-- mission description -->
 
     <div class="row justify-content-md-center">
