--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,10 @@
     <h1 class="text-center">Update My Information</h1>
 
     <section>
-      <h3 class="text-center dark-grey-text w-responsive mx-auto mb-5">"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur." -Author</h3>
+      <h3 class="text-center dark-grey-text w-responsive mx-auto mb-5">
+        "Change is inevitable.  Growth is optional."
+        <br><em><small>―John C. Maxwell</small></em>
+      </h3>
     </section> <!-- mission description -->
 
     <div class="row justify-content-md-center">
