--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,8 +5,8 @@
 
     <section>
       <h3 class="text-center dark-grey-text w-responsive mx-auto mb-5">
-        The strength of the team is each member. <br class="d-none d-md-block">The strength of each member is&nbsp;the&nbsp;team.
-        <br><em><small>―Phil Jackson</small></em>
+        If you want to go fast, go alone.. <br class="d-none d-md-block">If you want to go far, go&nbsp;together.
+        <br><em><small>―African Proverb</small></em>
       </h3>
     </section> <!-- mission description -->
 
