--- a/app/views/pages/contribute.html.erb
+++ b/app/views/pages/contribute.html.erb
@@ -49,6 +49,8 @@
     <section class="text-center">
       <h3 class="dark-grey-text w-responsive mx-auto mt-3 mb-5">
         Shareholders have agreed to make contributions which are a multiple of the amount contributed by emplyees.
+        <br><br>
+        <strong>For 2019, shareholders are matching contributions at a 6:1 ratio.</strong>
       </h3>
       <%= image_tag "matching.jpg", class: "width: 100%; max-width: 600px" %>
     </section> <!-- mission description -->
