--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= include_gon %>
-    <%= javascript_include_tag :application %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag :application %>
     <%= favicon_link_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,7 +18,7 @@
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
     <!-- Match Height -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <%# <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.2/jquery.matchHeight-min.js"></script>
 
     <!-- favicons -->
@@ -33,7 +33,8 @@
   </head>
 
   <body>
-    
+
+    <%= javascript_include_tag 'mdb_framework'%>
     <div class="non-footer">
       <%= render 'layouts/navbar' %>
       <%= render 'layouts/notifications' %>
@@ -44,6 +45,5 @@
     <%= render 'layouts/footer' %>
 
     <%= yield :additional_js %>
-
   </body>
 </html>
